--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -2,6 +2,7 @@
 sidebar_position: 2
 ---
 
+
 # 8.1 - Introduction to Electrical Charges
 
 ## 8.1.1 - Electrical Charge
@@ -10,7 +11,7 @@ sidebar_position: 2
 
 In the mid 18th century, Benjamin Franklin conducted a series of experiments concerning the attraction between objects and their electrical properties. He would work with materials such as glass rods, silk, and metal, while analyzing their behavior when rubbed against one another. The idea that opposite charges attract and like charges repel was already observed by many, but he tried to uncover the inner workings behind this concept. His idea of *positive charges* and *negative charges* went on to become a strong foundation for the field of electromagnetism.
 
-![Benjamin Franklin](../Unit-8/benfranklin.jpg)
+![Benjamin Franklin](benfranklin.jpg)
 
 ### Foundational Concepts
 
@@ -85,28 +86,58 @@ The idea became that:
 
 Induction is the process of charging a conductor, such as a metal, without touching it. Below is an example of how this works:
 
-1. [Step 1](step-1.svg)
-   1. A conductive metal object, which we will call Object M, starts with neutral charge (equal electrons and protons)
-2. [Step 2](step-2.svg)
-   1. Object M is brought near another object. However, the second object (we will call it Object C) is charged. Let's say that Object C has a negative charge.
-3. [Step 3](step-3.svg)
-   1. Remember: since Object M is made up of conductive metal, the electrons can move around freely. When we bring Object C near Object M, any electrons in M close to C will be repelled due to C's negative charge. Therefore, they will move to the other side of M.
-4. [Step 4](step-4.svg)
-   1. Now, the part of Object M that was closest to Object C will have an overall positive charge since those electrons moved away. However, Object M still won't be charged! The reason is because the electrons haven't left M. They are still there, but have just moved away from where Object C is. When we remove Object C, the electrons won't be repelled anymore and the overall charge of Object M won't be different. To make Object M charged, we need to **ground** it.
-   2. The wire connected to the three bars is the symbol for ground.
-5. When we attach a grounding wire to Object M, we are essentially connecting it to a reservoir, like Earth, which can accept and provide electrons freely with negligible effects. Think of a grounding wire like a pipe to the ocean. Because the ocean is massive, any water that we add or remove won't have a noticeable effect on the ocean's overall water amount. Similarly, any electrons which are accepted or provided to Earth (ground) won't affect Earth's overall electron amount.
-6. [Step 6](step-6.svg)
-   1. After we ground Object M, some of the repelled electrons that have moved to the other side will end up escaping through the wire and entering Earth.
-7. [Step 7](step-7.svg)
-   1. When you cut off the ground connection, Object M will have more protons than electrons because those repelled electrons have left. Therefore, the overall charge will be *positive*.
-8. [Step 8](step-8.svg)
-   1. We can remove object C. Thus, we have used induction to charge positively charge Object M!
+<hr></hr>
+
+![Step 1](step-1.svg)
+
+A conductive metal object, which we will call Object M, starts with a neutral charge (equal electrons and protons).
+
+<hr></hr>
+
+![Step 2](step-2.svg)
+
+Object M is brought near another object. However, the second object, which we will call it Object C, is charged. Let's say that Object C has a negative charge.
+
+<hr></hr>
+
+![Step 3](step-3.svg)
+
+When we bring Object C near Object M, any electrons in M that are close to C will be repelled due to C's negative charge. Remember: since Object M is made up of conductive metal, the electrons can move around freely. Therefore, the electrons will move to the other side of M.
+
+<hr></hr>
+
+![Step 4](step-4.svg)
+
+Now, the part of Object M that was closest to Object C will have an overall positive charge since those electrons moved away. However, Object M still won't be charged! The reason is because the electrons haven't left M. They are still there but have just moved away from where Object C is. When we remove Object C, the electrons won't be repelled anymore and the overall charge of Object M won't be different. To make Object M charged, we need to **ground** it.
+
+The wire connected to the three bars is the symbol for ground.
+
+When we attach a grounding wire to Object M, we are essentially connecting it to a reservoir, like Earth, which can accept and provide electrons freely with negligible effects. Think of a grounding wire like a pipe to the ocean. Because the ocean is massive, any water that we add or remove won't have a noticeable effect on the ocean's overall water amount. Similarly, any electrons which are accepted or provided to Earth (ground) won't affect Earth's overall charge.
+
+<hr></hr>
+
+<!-- <img src={step-6.svg} alt="Siamese cat" style={{width: 400}} /> -->
+![Step 6](step-6.svg)
+
+After we ground Object M, some of the repelled electrons that have moved to the other side will end up escaping through the wire and entering Earth.
+
+<hr></hr>
+
+![Step 7](step-7.svg)
+
+When you cut off the ground connection, Object M will have more protons than electrons because those repelled electrons have left. Therefore, the overall charge will be *positive*.
+
+<hr></hr>
+
+![Step 8](step-8.svg)
+
+We can remove object C. Thus, we have used induction to charge positively charge Object M!
 
 ## Useful Resources
 
 **8.1.1**
 
-* [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
-* [Professor Dave Explains video on charge](https://www.youtube.com/watch?v=VFbyDCG_j18)
-  * The latter part of the video talks about fields. You don't need to worry about that for now because we cover that in a later section, although you're welcome to learn about it and get a headstart!.
-* [Crash Course video about charge](https://www.youtube.com/watch?v=TFlVWf8JX4A)
+- [Quantization of charge: the meaning, equation and conservation of charges](https://testbook.com/physics/quantization-of-charge)
+- [Professor Dave Explains video on charge](https://www.youtube.com/watch?v=VFbyDCG_j18)
+  - The latter part of the video talks about fields. You don't need to worry about that for now because we cover that in a later section, although you're welcome to learn about it and get a headstart!.
+- [Crash Course video about charge](https://www.youtube.com/watch?v=TFlVWf8JX4A)
