new pictures with dark mode configuration

--- a/docs/Unit-8/8.4-lines.md
+++ b/docs/Unit-8/8.4-lines.md
@@ -2,4 +2,48 @@
 sidebar_position: 5
 ---
 
-## 8.4 - Electric Field Lines
+# 8.4 - Electric Field Lines
+
+## 8.4.1 - Overview of Electric Field Lines
+
+Earlier we talked about electric fields as a vector quantity represented by the symbol $\mathbf{E}$. Our entire understanding of electric fields stems from the interactions of positively and negatively charged objects and the test charge $\mathbf{P}$ which by scientific convention is always assumed positive. It is based on this assumption that we found out that for a positive test charge P, the direction of $\mathbf{E}$ will face away from a positively charged object, but toward a negatively charged one. The magnitude of the electric field $\mathbf{E}$ will get larger with a closer radius $\mathbf{r}$ as shown by $\mathbf{E} \propto \frac{1}{r^2}$
+
+There are models which show this concept in action in the previous module, but they were also sketched out in a linear 1 dimensional sense. Michael Faraday developed a useful method for us to futher visualize these electric fields. electric field lines are a way for us to look at electric fields in a simple manner while taking into characteristics provided by electric fields into account.
+
+:::tip[Key Concepts]
+
+In an electric field line diagram:
+- Positively charged objects have the electric field lines radiate outward
+- Negatively charged objects have the electric field lines raddiate inward
+- The lines get denser near the charged objects
+- Dense electric field lines symbolize a stronger field
+- The electric field vector $\mathbf{E}$ is always tangent to a field line at any point
+
+:::
+
+:::danger[Warning]
+
+Electric field lines are NOT REAL. A common misconception is that they are. This is not very true because in electric field line models, there are only a finite amount of lines which model the actions of the electric field. In reality, an electric fieldd is a continuous vector so the field exists at every point in space around the charge
+:::
+
+(TODO: sketch of positive and negative electric field lines)
+
+As you can see, the idea of the electric field $\mathbf{E}$ facing away from a positively charged object, but toward a negatively charged one is still at play here. Below is a diagram of what an electric field line diagram may look like for both a positively and negatively charged particle.
+
+## 8.4.2 - Analysis of Electric Fields in Dipoles
+
+Again, the linear density of an electric field is proportional to its charge magnitude, an idea represented by $\mathbf{N} = \mathbf{C} q$ such that $\mathbf{N}$ is the number of lines, $\mathbf{q}$ is the charge, and $\mathbf{C}$ is a constant. We can also model the interactions between two charged objects through an electric field when modeling a dipole. A dipole is a system of two charged objects.
+
+::tip[Key Concepts]
+
+When drawing a diagram for a dipole:
+- The electric field lines always go from positive to negative
+- Lines deflect if charged objects repel
+- Lines converge if charged objects attract
+- If both objects have unequal charges, only some amount of the lines reach the negative charge. The rest are deflected
+
+:::
+
+Below are different models of dipoles followed by their respective charge magnitudes and signs.
+
+(TODO: Insert examples here)
