--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -2,4 +2,4 @@
 sidebar_position: 6
 ---
 
-## 8.5 - Motion of Charged Particles in an Electric Field
+# 8.5 - Motion of Charged Particles in an Electric Field
