more resources + format fix

--- a/docs/Unit-8/8.4-lines.md
+++ b/docs/Unit-8/8.4-lines.md
@@ -34,7 +34,7 @@ As you can see, the idea of the electric field $\mathbf{E}$ facing away from a p
 
 Again, the linear density of an electric field is proportional to its charge magnitude, an idea represented by $\mathbf{N} = \mathbf{C} q$ such that $\mathbf{N}$ is the number of lines, $\mathbf{q}$ is the charge, and $\mathbf{C}$ is a constant. We can also model the interactions between two charged objects through an electric field when modeling a dipole. A dipole is a system of two charged objects.
 
-::tip[Key Concepts]
+:::tip[Key Concepts]
 
 When drawing a diagram for a dipole:
 - The electric field lines always go from positive to negative
