--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -3,3 +3,6 @@ sidebar_position: 6
 ---
 
 # 8.5 - Motion of Charged Particles in an Electric Field
+
+From when we covered coulomb's law and electric fields, we learned about the force  $\mathbf{F}_{e}$ which signified the coulombic force of attraction inside an electric field. If this is the only force actiing upon a particle of charge $\mathbf{q}$ and mass $\mathbf{m}$, then it is permissible to say that it must be the net force which causes the particle to accelerate. By Newton's 2nd law, we can say that $\sum \mathbf{F} = \mathbf{F}_e = q\mathbf{E} = m\mathbf{a}$. If a particle under the influence of an electric field has an acceleration, then we are able to analyze its motion when inside of an electric field as well. By nature, if the charge is positive, then the acceleration and the electric field will have the same direction. If the charge is negative however, they will be in opposite directions.
+
