some last minute changes

--- a/docs/Unit-8/8.2-coulomb.md
+++ b/docs/Unit-8/8.2-coulomb.md
@@ -108,7 +108,7 @@ Here is a video describing how we can use Coulomb's Law to determine electrostat
 * [Video explaining Coulomb's experiment](https://www.youtube.com/watch?v=FYSTGX-F1GM)
 * [Extended explanation of the inverse square law](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/ee-inverse-square-law)
 
-**8.2.1**
+**8.2.2**
 
 * [Britannica's definition of Coulomb’s law](https://www.britannica.com/science/Coulombs-law)
 * [Khan Academy video on Coulomb's law and determining electrostatic forces](https://youtu.be/2GQTfpDE9DQ)
@@ -116,7 +116,7 @@ Here is a video describing how we can use Coulomb's Law to determine electrostat
 * [Alternate explanation of charge and force](https://phys.libretexts.org/Courses/University_of_California_Davis/UCD%3A_Physics_7C_-_General_Physics/11%3A_Electromagnetism/11.2%3A_Electric_Force#:~:text=The%20force%20depends%20on%20the,forces%2C%20is%20a%20pairwise%20interaction.)
 * [The Organic Chemistry Tutor video on Coulomb's Law](https://www.youtube.com/watch?v=kCp5yYjo9zE)
 
-### Equations and Constants
+## Equations and Constants
 
 **Equations**
 
