--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -129,6 +129,14 @@ And just like how you can have something uniformly distributed, you can also hav
 * Surface: $dq = \sigma dV$
 * Line: $dq = \lambda dV$
 
+:::note[Suggested Content]
+
+A video covering integrals in the context of electric fields. It also covers something called electric potential, just ignore that for now.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mACpLjE_XKk?si=QiPkpF55vUB03UTB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+:::
+
 ## Useful Resources
 
 **8.3.1**
@@ -139,7 +147,7 @@ And just like how you can have something uniformly distributed, you can also hav
 * [Crash Course video about electric fields](https://www.youtube.com/watch?v=mdulzEfQXDE)
 * [Khan Academy article about electricl fields](https://www.khanacademy.org/science/electrical-engineering/ee-electrostatics/ee-electric-force-and-electric-field/a/ee-electric-field)
 
-### Equations and Constants
+## Equations and Constants
 
 **Equations**
 
