--- a/docs/Unit-8/8.4-lines.md
+++ b/docs/Unit-8/8.4-lines.md
@@ -23,7 +23,7 @@ In an electric field line diagram:
 
 :::danger[Warning]
 
-Electric field lines are NOT REAL. A common misconception is that they are. This is not very true because in electric field line models, there are only a finite amount of lines which model the actions of the electric field. In reality, an electric fieldd is a continuous vector so the field exists at every point in space around the charge
+Electric field lines are **not real**. A common misconception is that they are. This is not very true because in electric field line models, there are only a finite amount of lines which model the actions of the electric field. In reality, an electric fieldd is a continuous vector so the field exists at every point in space around the charge
 :::
 
 (TODO: sketch of positive and negative electric field lines)
@@ -44,6 +44,32 @@ When drawing a diagram for a dipole:
 
 :::
 
+
 Below are different models of dipoles followed by their respective charge magnitudes and signs.
 
 (TODO: Insert examples here)
+
+In summary, electric field lines are visual representations which help us explain the behavior of electric fields in relationship to positively and negative charged objects.
+
+:::note[Suggested Content]
+
+Here is a useful viddeo about drawing electric field lines.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/AtbaYUYTawg?si=9Mo2w3xz5jgiye5F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+:::
+
+## Useful Resources
+
+**8.4.1**
+
+* [Video explaining Coulomb's experiment](https://www.youtube.com/watch?v=FYSTGX-F1GM)
+* [Extended explanation of the inverse square law](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/ee-inverse-square-law)
+
+**8.4.2**
+
+* [Britannica's definition of Coulomb’s law](https://www.britannica.com/science/Coulombs-law)
+* [Khan Academy video on Coulomb's law and determining electrostatic forces](https://youtu.be/2GQTfpDE9DQ)
+* [Khan Academy review article on Coulomb's law and electrostatic forces](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/coulombs-law-and-electric-force-ap-physics-1)
+* [Alternate explanation of charge and force](https://phys.libretexts.org/Courses/University_of_California_Davis/UCD%3A_Physics_7C_-_General_Physics/11%3A_Electromagnetism/11.2%3A_Electric_Force#:~:text=The%20force%20depends%20on%20the,forces%2C%20is%20a%20pairwise%20interaction.)
+* [The Organic Chemistry Tutor video on Coulomb's Law](https://www.youtube.com/watch?v=kCp5yYjo9zE)
