--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -35,3 +35,9 @@ This video contains the basics of some motion calculations which may be done und
 <iframe width="560" height="315" src="https://www.youtube.com/embed/J3b7pjp4f9c?si=-bvCtXpZ596sQt5u" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 :::
 
+## Useful Resources
+
+**8.5.1**
+
+* [Video explaining Coulomb's experiment](https://www.youtube.com/watch?v=FYSTGX-F1GM)
+* [Extended explanation of the inverse square law](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/ee-inverse-square-law)
