--- a/docs/Unit-8/8.6-gauss.md
+++ b/docs/Unit-8/8.6-gauss.md
@@ -51,19 +51,9 @@ Well, in physics we usually see that whenever there is a problem concerning mult
 
 $\Phi_E = \oint \mathbf{E} \cdot d\mathbf{A}$
 
-**Note:** The integral with a ring in it represents a surface integral. Evaluating it requires knowledge of the complex plane. You do NOT need to know solve these types of integrals in this course. Usually this integral will simplify into something which is easier to work with. 
-:::
-
-:::danger[Warning]
-
-The surface integral is not to be confused with a contour integral. The distinction requires knowledge of multivariable calculus which is fundamental to electricity and magnetism, but simplified for the AP Physics E&M course.
-
-| Integral Type                  | Description                               | Dimension                  | Typical Notation                              |
-|-------------------------------|-------------------------------------------|----------------------------|----------------------------------------------|
-| **Contour Integral (Line Integral)** | Integral of a function along a **curve (path)** | 1D (over a curve or path)   | $\displaystyle \oint_C \mathbf{F} \cdot d\mathbf{r}$ or $\displaystyle \int_C f(x,y) \, ds$ |
-| **Surface Integral**           | Integral of a vector or scalar field over a **surface** | 2D (over a surface in 3D)  | $\displaystyle \oint_S \mathbf{E} \cdot d\mathbf{A}$ or $\displaystyle \iint_S f(x,y,z) \, dA$ |
-
+**Note:** The integral with a ring in it represents the integral of a closed path or a surface. Evaluating it may be a bit complex, but that is where Gauss's Law comes in. Gauss's Law will let us find the quantity above easily.
 
 :::
+
 
 ## 8.6.2 - Gauss's Law
