--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -8,7 +8,7 @@ sidebar_position: 6
 
 From when we covered coulomb's law and electric fields, we learned about the force  $\mathbf{F}_{e}$ which signified the coulombic force of attraction inside an electric field. If this is the only force actiing upon a particle of charge $\mathbf{q}$ and mass $\mathbf{m}$, then it is permissible to say that it must be the net force which causes the particle to accelerate. By Newton's 2nd law, we can say that $\sum \mathbf{F} = \mathbf{F}_e = q\mathbf{E} = m\mathbf{a}$. If a particle under the influence of an electric field has an acceleration, then we are able to analyze its motion when inside of an electric field as well. By nature, if the charge is positive, then the acceleration and the electric field will have the same direction. If the charge is negative however, they will be in opposite directions.
 
-Due to this constant acceleration, we are also permitted to use the kinematics equations we had used in our first unit learning about motion. When the idea of an acceleration due to an electric field is tied into this concept, we are able to create variations of these equations based off of the acceleration caused by the electric field. It is foundational knowledge to be able to identify that the force caused by an electric field is JUST ANOTHER FORCE. It all simplifies out into newtons. The laws of mechanics still apply and can be chained to electricity and magnetism in this way. As an example, below is a walk through of a question regarding the motion of a charged particle.
+Due to this constant acceleration, we are also permitted to use the kinematics equations we had used in our first unit learning about motion. When the idea of an acceleration due to an electric field is tied into this concept, we are able to create variations of these equations based off of the acceleration caused by the electric field. It is foundational knowledge to be able to identify that **the force caused by an electric field is just another force**. It all simplifies out into newtons. **The laws of mechanics still apply** and can be chained to electricity and magnetism in this way. As an example, below is a walk through of a question regarding the motion of a charged particle.
 
 :::info[Sample Question]
 A *Cathode Ray Tube (CRT)* is a device used to generate visual displays by accelerating electrons. In this scenario, an electron is fired horizontally from the electron gun with an initial velocity of $v_i = 1{,}000{,}000 \, \text{m/s}$. Immediately after being emitted, the electron enters a region between two parallel plates that are each $\ell = 0.2 \, \text{m}$ in length. The **positively charged plate is on top**, and the **negatively charged plate is on the bottom**, creating a uniform electric field of magnitude $E = 300 \, \text{N/C}$ pointing vertically downward. What is the vertical displacement $\Delta y$ of the electron as it exits the parallel plate region?
@@ -26,7 +26,9 @@ $\Delta y = \frac{1}{2}(5.27 \times 10^{13})(4 \times 10^{-14})$
 $\Delta y = (2 \times 10^{-14})(5.27 \times 10^{13}) = 1.05 \, \text{m}$
 :::
 
-Essentially, when analyzing motion of charged opjects it is important to consider that the same laws of mechanics stilll apply. Such as the kinematics equations which apply during constant acceleration or certain relationships such as torque and angular acceleration. The force caused by an electric field is **just another force**.
+Essentially, when analyzing motion of charged opjects it is important to consider that the same laws of mechanics stilll apply. Such as the kinematics equations which apply during constant acceleration or certain relationships such as torque and angular acceleration. The force caused by an electric field is just another force.
+
+*What about gravity?* Right now, we can neglect the effects of gravity. Since we are dealing with atomic particles, the forces of electricity far exceed the forces of gravity.
 
 :::note[Suggested Content]
 
