--- a/docs/Unit-8/8.4-lines.md
+++ b/docs/Unit-8/8.4-lines.md
@@ -6,16 +6,19 @@ sidebar_position: 5
 
 ## 8.4.1 - Overview of Electric Field Lines
 
-Earlier we talked about electric fields as a vector quantity represented by the symbol $\mathbf{E}$. Our entire understanding of electric fields stems from the interactions of positively and negatively charged objects and the test charge $\mathbf{P}$ which by scientific convention is always assumed positive. It is based on this assumption that we found out that for a positive test charge P, the direction of $\mathbf{E}$ will face away from a positively charged object, but toward a negatively charged one. The magnitude of the electric field $\mathbf{E}$ will get larger with a closer radius $\mathbf{r}$ as shown by $\mathbf{E} \propto \frac{1}{r^2}$
+Earlier we talked about electric fields as a vector quantity represented by the symbol $\mathbf{E}$. Our understanding of electric fields stems from the interactions of positively and negatively charged objects, and the test charge $\mathbf{P}$ which (by scientific convention) is always assumed positive. Based on this assumption, we found out that for a positive test charge P, the direction of $\mathbf{E}$ will face away from a positively charged object. However, it will face a negatively charged one. The magnitude of the electric field $\mathbf{E}$ will be greater when the distance between two particles ($\mathbf{r}$) is smaller as shown by $\mathbf{E} \propto \frac{1}{r^2}$.
 
-There are models which show this concept in action in the previous module, but they were also sketched out in a linear 1 dimensional sense. Michael Faraday developed a useful method for us to futher visualize these electric fields. electric field lines are a way for us to look at electric fields in a simple manner while taking into characteristics provided by electric fields into account.
+There are models that show this concept in the previous module. However, they were only sketched out one dimensionally. In other words, we only represented electric fields as a horizontal line.
+
+Scientist Michael Faraday realized that electric fields are not one dimensional, but rather three dimensional. They extend from a particle in every direction! Faraday eventually developed a useful method for us to visualize these electric fields: **electric field lines**. Electric field lines are a way for us to look at electric fields in a simple manner while taking into account the characteristics of electric fields.
 
 :::tip[Key Concepts]
 
 In an electric field line diagram:
-- Positively charged objects have the electric field lines radiate outward
-- Negatively charged objects have the electric field lines raddiate inward
-- The lines get denser near the charged objects
+
+- Positively charged objects have the electric field lines that radiate outward
+- Negatively charged objects have the electric field lines that radiate inward
+- The closer you are to the charged object, the denser the set of lines will be
 - Dense electric field lines symbolize a stronger field
 - The electric field vector $\mathbf{E}$ is always tangent to a field line at any point
 
@@ -23,37 +26,42 @@ In an electric field line diagram:
 
 :::danger[Warning]
 
-Electric field lines are **not real**. A common misconception is that they are. This is not very true because in electric field line models, there are only a finite amount of lines which model the actions of the electric field. In reality, an electric fieldd is a continuous vector so the field exists at every point in space around the charge
+Electric field lines are **not real**. While an electric field itself is real, the lines in the pictures aren’t. The reason for this is because in electric field line models (these are the diagrams of charged particles), there are only a finite amount of lines. This makes it look like the field only exists where those specific lines are. In reality, an electric field is a continuous vector, so the field exists at every point in space around the charge. In other words, at any point around a charged particle, an electric field exists. Therefore, the field would have infinite lines (but obviously, you wouldn’t be able to draw that!).
+
 :::
 
 (TODO: sketch of positive and negative electric field lines)
 
-As you can see, the idea of the electric field $\mathbf{E}$ facing away from a positively charged object, but toward a negatively charged one is still at play here. Below is a diagram of what an electric field line diagram may look like for both a positively and negatively charged particle.
+As you can see, the idea of the electric field $\mathbf{E}$ facing away from a positively charged object, but toward a negatively charged one is still at play here. Below is what an electric field line diagram would look like for both a positively and negatively charged particle.
+
+(TODO: sketch whats above)
 
 ## 8.4.2 - Analysis of Electric Fields in Dipoles
 
-Again, the linear density of an electric field is proportional to its charge magnitude, an idea represented by $\mathbf{N} = \mathbf{C} q$ such that $\mathbf{N}$ is the number of lines, $\mathbf{q}$ is the charge, and $\mathbf{C}$ is a constant. We can also model the interactions between two charged objects through an electric field when modeling a dipole. A dipole is a system of two charged objects.
+The linear density of an electric field is proportional to its charge magnitude, an idea represented by $\mathbf{N} = \mathbf{C} q$ such that $\mathbf{N}$ is the number of lines, $\mathbf{q}$ is the charge, and $\mathbf{C}$ is a constant. In other words, the greater the charge, the greater the number of electric field lines!
+
+We can also model the interactions between two charged objects through an electric field when modeling a dipole. A dipole is a system of two charged objects.
 
 :::tip[Key Concepts]
 
 When drawing a diagram for a dipole:
-- The electric field lines always go from positive to negative
+
+- The electric field lines **always** flow from positive to negative
 - Lines deflect if charged objects repel
 - Lines converge if charged objects attract
 - If both objects have unequal charges, only some amount of the lines reach the negative charge. The rest are deflected
 
 :::
 
-
-Below are different models of dipoles followed by their respective charge magnitudes and signs.
+Below are different models of dipoles followed by their respective charge magnitudes and signs:
 
 (TODO: Insert examples here)
 
-In summary, electric field lines are visual representations which help us explain the behavior of electric fields in relationship to positively and negative charged objects.
+In summary, electric field lines are visual representations that help us explain the behavior of electric fields in relationship to positively and negative charged objects.
 
 :::note[Suggested Content]
 
-Here is a useful viddeo about drawing electric field lines.
+Here is a useful video about drawing electric field lines.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/AtbaYUYTawg?si=9Mo2w3xz5jgiye5F" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
@@ -63,13 +71,8 @@ Here is a useful viddeo about drawing electric field lines.
 
 **8.4.1**
 
-* [Video explaining Coulomb's experiment](https://www.youtube.com/watch?v=FYSTGX-F1GM)
-* [Extended explanation of the inverse square law](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/ee-inverse-square-law)
+-
 
 **8.4.2**
 
-* [Britannica's definition of Coulomb’s law](https://www.britannica.com/science/Coulombs-law)
-* [Khan Academy video on Coulomb's law and determining electrostatic forces](https://youtu.be/2GQTfpDE9DQ)
-* [Khan Academy review article on Coulomb's law and electrostatic forces](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/coulombs-law-and-electric-force-ap-physics-1)
-* [Alternate explanation of charge and force](https://phys.libretexts.org/Courses/University_of_California_Davis/UCD%3A_Physics_7C_-_General_Physics/11%3A_Electromagnetism/11.2%3A_Electric_Force#:~:text=The%20force%20depends%20on%20the,forces%2C%20is%20a%20pairwise%20interaction.)
-* [The Organic Chemistry Tutor video on Coulomb's Law](https://www.youtube.com/watch?v=kCp5yYjo9zE)
+-
