--- a/docs/Unit-8/8.5-motion.md
+++ b/docs/Unit-8/8.5-motion.md
@@ -6,9 +6,34 @@ sidebar_position: 6
 
 ## 8.5.1 - Acceleration in an Electric Field
 
-From when we covered coulomb's law and electric fields, we learned about the force  $\mathbf{F}_{e}$ which signified the coulombic force of attraction inside an electric field. If this is the only force actiing upon a particle of charge $\mathbf{q}$ and mass $\mathbf{m}$, then it is permissible to say that it must be the net force which causes the particle to accelerate. By Newton's 2nd law, we can say that $\sum \mathbf{F} = \mathbf{F}_e = q\mathbf{E} = m\mathbf{a}$. If a particle under the influence of an electric field has an acceleration, then we are able to analyze its motion when inside of an electric field as well. By nature, if the charge is positive, then the acceleration and the electric field will have the same direction. If the charge is negative however, they will be in opposite directions.
+From when we covered Coulomb's law and electric fields, we learned about the force  $\mathbf{F}_{e}$, which signified the Coulombic force of attraction inside an electric field. If that is the only force acting upon a particle of charge $\mathbf{q}$ and mass $\mathbf{m}$, then we can say that it must be the net force that causes the particle to accelerate. By Newton's 2nd law, we can say that $\sum \mathbf{F} = \mathbf{F}_e = q\mathbf{E} = m\mathbf{a}$.
 
-Due to this constant acceleration, we are also permitted to use the kinematics equations we had used in our first unit learning about motion. When the idea of an acceleration due to an electric field is tied into this concept, we are able to create variations of these equations based off of the acceleration caused by the electric field. It is foundational knowledge to be able to identify that **the force caused by an electric field is just another force**. It all simplifies out into newtons. **The laws of mechanics still apply** and can be chained to electricity and magnetism in this way. As an example, below is a walk through of a question regarding the motion of a charged particle.
+If the electric field $\mathbf{E}$ is uniform (constant in magnitude and direction), then any particle in that field will have a constant acceleration. With that knowledge, that means we can also analyze the motion of the particle.
+
+If the particle is positively charged, then its acceleration will be in the same direction as the electric field. If the particle is negatively charged, then the acceleration will be in the opposite direction of the electric field.
+
+Due to this constant acceleration, we can use the kinematics equations that we learned in mechanics. Because we know that an electric field can have constant acceleration, we can modify the original kinematics equations and use the concepts of electricity. Below are some kinematic equations that have been adapted for electricity:
+
+We know that $\mathbf{F}_e = q\mathbf{E} = m\mathbf{a}$, or $q\mathbf{E} = m\mathbf{a}$. When we isolate for acceleration, we get:
+
+$\mathbf{a} = \frac{q\mathbf{E}}{m}$
+
+Our original kinematic equations are as follows:
+$\Delta x = v_{i}t + \frac{1}{2}at^{2}$
+$v_{f} = v_{i} + at$
+$v_{f}^{2} = v_{i}^{2} +2a\Delta x$
+
+All we need to do is plug in our value for $\mathbf{a}$ into those equations:
+
+$\Delta x = v_{i}t + \frac{q\mathbf{E}}{2m}t^{2}$
+$v_{f} = v_{i} + \frac{q\mathbf{E}}{m}t$
+$v_{f}^{2} = v_{i}^{2} +\frac{2q\mathbf{E}}{m}\Delta x$
+
+In fact, **we can find the kinetic energy of a charge** using our kinetic energy equations.
+
+We know that, based on the work-kinetic energy theorem, $W = \Delta K$. We also know that $W = \int_{x_{i}}^{x_{f}} f(x)dx$, or Work = Force $\times$ Distance. Lastly, we know that $F_{e} = qE$. If we multiply both sides of the equation by $\Delta x$, we get $F_{e}\Delta x = qE\Delta x$. Therefore $W = qE\Delta x$, and since $W = \Delta K$, that means $\Delta K = qE\Delta x$
+
+Remember: **the force caused by an electric field is just another force**. **The laws of mechanics still apply** and can be used in electricity and magnetism. As an example, below is a walkthrough of a question regarding the motion of a charged particle.
 
 :::info[Sample Question]
 A *Cathode Ray Tube (CRT)* is a device used to generate visual displays by accelerating electrons. In this scenario, an electron is fired horizontally from the electron gun with an initial velocity of $v_i = 1{,}000{,}000 \, \text{m/s}$. Immediately after being emitted, the electron enters a region between two parallel plates that are each $\ell = 0.2 \, \text{m}$ in length. The **positively charged plate is on top**, and the **negatively charged plate is on the bottom**, creating a uniform electric field of magnitude $E = 300 \, \text{N/C}$ pointing vertically downward. What is the vertical displacement $\Delta y$ of the electron as it exits the parallel plate region?
@@ -26,7 +51,7 @@ $\Delta y = \frac{1}{2}(5.27 \times 10^{13})(4 \times 10^{-14})$
 $\Delta y = (2 \times 10^{-14})(5.27 \times 10^{13}) = 1.05 \, \text{m}$
 :::
 
-Essentially, when analyzing motion of charged opjects it is important to consider that the same laws of mechanics stilll apply. Such as the kinematics equations which apply during constant acceleration or certain relationships such as torque and angular acceleration. The force caused by an electric field is just another force.
+Essentially, when analyzing motion of charged objects, it is important to consider that the same laws of mechanics still apply. For example, the kinematics equations, because they still apply during constant acceleration or certain relationships such as torque and angular acceleration. Once again: **the force caused by an electric field is just another force.**
 
 *What about gravity?* Right now, we can neglect the effects of gravity. Since we are dealing with atomic particles, the forces of electricity far exceed the forces of gravity.
 
@@ -41,5 +66,4 @@ This video contains the basics of some motion calculations which may be done und
 
 **8.5.1**
 
-* [Video explaining Coulomb's experiment](https://www.youtube.com/watch?v=FYSTGX-F1GM)
-* [Extended explanation of the inverse square law](https://www.khanacademy.org/science/in-in-class-12th-physics-india/in-in-electric-charges-and-field/in-in-coulombs-law-and-electric-force/a/ee-inverse-square-law)
+*
