update induction dias

--- a/docs/Unit-8/8.1-charges.md
+++ b/docs/Unit-8/8.1-charges.md
@@ -88,25 +88,25 @@ Induction is the process of charging a conductor, such as a metal, without touch
 
 <hr></hr>
 
-![Step 1](step-1.svg)
+![Step 1](Induction-Step-1.svg)
 
 A conductive metal object, which we will call Object M, starts with a neutral charge (equal electrons and protons).
 
 <hr></hr>
 
-![Step 2](step-2.svg)
+![Step 2](Induction-Step-2.svg)
 
 Object M is brought near another object. However, the second object, which we will call it Object C, is charged. Let's say that Object C has a negative charge.
 
 <hr></hr>
 
-![Step 3](step-3.svg)
+![Step 3](Induction-Step-3.svg)
 
 When we bring Object C near Object M, any electrons in M that are close to C will be repelled due to C's negative charge. Remember: since Object M is made up of conductive metal, the electrons can move around freely. Therefore, the electrons will move to the other side of M.
 
 <hr></hr>
 
-![Step 4](step-4.svg)
+![Step 4](Induction-Step-4.svg)
 
 Now, the part of Object M that was closest to Object C will have an overall positive charge since those electrons moved away. However, Object M still won't be charged! The reason is because the electrons haven't left M. They are still there but have just moved away from where Object C is. When we remove Object C, the electrons won't be repelled anymore and the overall charge of Object M won't be different. To make Object M charged, we need to **ground** it.
 
@@ -117,19 +117,19 @@ When we attach a grounding wire to Object M, we are essentially connecting it to
 <hr></hr>
 
 <!-- <img src={step-6.svg} alt="Siamese cat" style={{width: 400}} /> -->
-![Step 6](step-6.svg)
+![Step 6](Induction-Step-6.svg)
 
 After we ground Object M, some of the repelled electrons that have moved to the other side will end up escaping through the wire and entering Earth.
 
 <hr></hr>
 
-![Step 7](step-7.svg)
+![Step 7](Induction-Step-7.svg)
 
 When you cut off the ground connection, Object M will have more protons than electrons because those repelled electrons have left. Therefore, the overall charge will be *positive*.
 
 <hr></hr>
 
-![Step 8](step-8.svg)
+![Step 8](Induction-Step-8.svg)
 
 We can remove object C. Thus, we have used induction to charge positively charge Object M!
 
