update fields dias

--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -48,7 +48,7 @@ It’s important to note that these equations only work if **we assume that $q_{
 
 ### Determining the Direction of an Electric Field
 
-![Postive source charge and a test charge; the force is directed away from the source.](pos-force.svg)
+![Postive source charge and a test charge; the force is directed away from the source.](Fields-Positive-Force.svg)
 
 Consider the diagram above. Here, we have a source charge $q$ and a test charge $q_{0}$. We have placed $q_{0}$ at a distance of $r$ away from $q$, and we will use this test charge to find out the direction of $q$’s electric force and thus the direction of its field.
 
@@ -72,11 +72,11 @@ Remember how we said that the electric field of a charged object is **not** depe
 
 Now, consider the following diagram:
 
-![Postive source charge with an observed positive electric field.](pos-field.svg)
+![Postive source charge with an observed positive electric field.](Fields-Positive-Field.svg)
 
 The diagram above represents our equation for the electric field. You’ll see that the electric field at point $P$, where $q_{0}$ used to be, is in the same direction as the electric force. Below, you’ll see what happens to the electric field if $q$ is *negatively charged.* In fact, if you plug in a negative value for $q$ into the electric field equation, you’ll get a negative vector answer.
 
-![Negative source charge; the field is directed towards the source.](neg-field.svg)
+![Negative source charge; the field is directed towards the source.](Fields-Negative-Field.svg)
 
 ### Calculating the Electric Field due to a Group of Point Charges
 
