--- a/docs/Unit-8/8.2-coulomb.md
+++ b/docs/Unit-8/8.2-coulomb.md
@@ -30,7 +30,7 @@ Based on Coulomb's experiments, we can determine a set of properties for **elect
 
 * Electric force is a conservative force
 * The force is attractive if the charges are of the opposite sign and repulsive if the charges are of the same sign
-* The force is proportional to the product of the magnitudes of the charges, |q_{1}| \cdot |q_{2}|
+* The force is proportional to the product of the magnitudes of the charges, $|q_{1}| \cdot |q_{2}|$
 * The force is inversely proportional to the square of the distance between the charges and is directed along the line that joins them
   * When the charges are close, the force is stronger. When the charges are far, the force is weaker. It is similar to how gravitational force works. If the distance between two charges is doubled, the force is a fourth of the strength. If the charges are twice as close, the force increases by a factor of four.
 
@@ -40,7 +40,7 @@ Based on Coulomb's experiments, we can determine a set of properties for **elect
 
 ### The Coulomb’s Law Equation and the Coulomb Constant
 
-Just like how we can define an object as a particle for mechanical physics, we can define a charge as a **point charge**. **Coulomb’s law** helps us determine the electric force (alternatively called *Coulomb force*)) between two point charges:
+Just like how we can define an object as a particle for mechanical physics, we can define a charge as a **point charge**. **Coulomb’s law** helps us determine the electric force (alternatively called *Coulomb force*) between two point charges:
 
 :::tip[Key Equation]
 
