--- a/docs/Unit-8/8.6-gauss.md
+++ b/docs/Unit-8/8.6-gauss.md
@@ -2,9 +2,9 @@
 sidebar_position: 6
 ---
 
-# 8.6 - Gauss's Law
+# 8.6 - Electric Flux
 
-## 8.6.1 - Electric Flux
+## 8.6.1 - Flux
 
 Earlier we learned about electric fields and their interactions with objects. However, we have not yet covered the idea of an electric field passing through a surface. By definition, the meaning of flux is flow. A measurement of flux is a measurement of flow. To better understand the idea of electric flux, we must understand flux itself first.
 
