--- a/docs/Unit-8/8.3-fields.md
+++ b/docs/Unit-8/8.3-fields.md
@@ -44,11 +44,13 @@ $\mathbf{E}$ is a vector and is in newtons per coulomb, or N/C. The direction of
 
 We can state that **an electric field exists as a specific point/location if a test charge at that point/location experiences an electric force.** If you know the magnitude and direction of the field at a point, you can calculate the force exerted on any particle at that same point using the aforementioned key equation.
 
-It’s important to note that these equations only work if **we assume that $q_{0}$ (the test charge) is extremely small and doesn’t affect the charge distribution of the electric field.** If you were to have a particle with a significant amount of charge ($q^{'}_{0} \gg q_{0}$), then the electric fields end up changing. In that case, we can’t use the equations above. This is because the *ratio of the force to the test charge is different*. In other words, $\frac{F^{'}_{e}}{q^{'}_{0}} \not\equiv \frac{F_{e}}{q_{0}}$. Now, the equations will not work for the new test case. So remember: $q_{0}$ has to be extremely small.
+It’s important to note that these equations only work if **we assume that $q_{0}$ (the test charge) is extremely small and doesn’t affect the charge distribution of the electric field.** If you were to have a particle with a significant amount of charge ($q^{'}_{0} \gg q_{0}$), then the electric fields end up changing. In that case, we can’t use the equations above. This is because the *ratio of the force to the test charge is different*. In other words,
+
+$\frac{F^{\prime}_{e}}{q^{\prime}_{0}} \not\equiv \frac{F_{e}}{q_{0}}$
+
+Now, the equations will not work for the new test case. So remember: $q_{0}$ has to be extremely small.
 
 ### Determining the Direction of an Electric Field
-
-<!-- TODO: update diagram colors -->
 
 ![Postive source charge and a test charge; the force is directed away from the source.](8.3-Images/Fields-Positive-Force.svg)
 
@@ -148,14 +150,33 @@ A video covering integrals in the context of electric fields. It also covers som
 * [Khan Academy video explaining fields](https://www.khanacademy.org/science/ap-physics-2/ap-2-electric-charge-electric-force-and-voltage/electric-field-ap2/v/electric-field-definition)
 * [Crash Course video about electric fields](https://www.youtube.com/watch?v=mdulzEfQXDE)
 * [Khan Academy article about electricl fields](https://www.khanacademy.org/science/electrical-engineering/ee-electrostatics/ee-electric-force-and-electric-field/a/ee-electric-field)
+* [Explanation of the electric field equation](https://openstax.org/books/physics/pages/18-3-electric-field)
+<!-- TODO: add resources for 8.3.2 -->
 
 ## Equations and Constants
 
 **Equations**
 
-* equation
-  * define each term
+* $\mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$
+  * $\mathbf{E}$ = the electric field vector
+  * $\mathbf{F}_{e}$ = the electrical force
+  * $q_{1}$ and $q_{2}$ = the two charges
+  * $q_{0}$ = the positive test charge
+* $\mathbf{F}_{e}  = q\mathbf{E}$
+  * Alternate form of the equation above
+* $\mathbf{E} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
+  * $k_{e}$ = Coulomb's constant
+  * $q$ = the magnitude of force between the point charge ($q$) and the test charge
+  * $r^{2}$ = the distance between the point charge ($q$) and the point of interest
+* $\mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
+  * $r_{i}$ = the distance between the $i$th source charge $q_{i}$ and point $P$
+  * $\hat{\mathbf{r}}_{i}$ = a unit vector directed from $q_{i}$ toward $P$
+  * All other variables are the same as the equation above
+* Charge density formulas:
+  * Volume: $dq = \rho dV$
+  * Surface: $dq = \sigma dV$
+  * Line: $dq = \lambda dV$
 
 **Constants**
 
-* list of constants
+* $k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2} = \frac{1}{4\pi\epsilon_{0}}$
