--- a/docs/Unit-8/8.4-lines.md
+++ b/docs/Unit-8/8.4-lines.md
@@ -81,26 +81,8 @@ Here is a useful video about drawing electric field lines.
 
 **Equations**
 
-- $\mathbf{E} = \frac{\mathbf{F}_{e}}{q_{0}}$
-  - $\mathbf{E}$ = the electric field vector
-  - $\mathbf{F}_{e}$ = the electrical force
-  - $q_{1}$ and $q_{2}$ = the two charges
-  - $q_{0}$ = the positive test charge
-- $\mathbf{F}_{e}  = q\mathbf{E}$
-  - Alternate form of the equation above
-- $\mathbf{E} = k_{e}\frac{q}{r^{2}}\mathbf{\hat{r}}$
-  - $k_{e}$ = Coulomb's constant
-  - $q$ = the magnitude of force between the point charge ($q$) and the test charge
-  - $r^{2}$ = the distance between the point charge ($q$) and the point of interest
-- $\mathbf{E} = k_{e}\sum_{i}^{}\frac{q_{i}}{r^{2}_{i}}\hat{\mathbf{r}}_{i}$.
-  - $r_{i}$ = the distance between the $i$th source charge $q_{i}$ and point $P$
-  - $\hat{\mathbf{r}}_{i}$ = a unit vector directed from $q_{i}$ toward $P$
-  - All other variables are the same as the equation above
-- Charge density formulas:
-  - Volume: $dq = \rho dV$
-  - Surface: $dq = \sigma dV$
-  - Line: $dq = \lambda dV$
+- $\mathbf{N} = \mathbf{C} q$
+  - $\mathbf{N}$ = the number of lines
+  - $\mathbf{q}$ = the charge
+  - $\mathbf{C}$ = a constant
 
-**Constants**
-
-- $k_{e} = 8.9875 \times 10^{9} \text{ N} \cdot \text{m}^{2}/\text{C}^{2} = \frac{1}{4\pi\epsilon_{0}}$
